resources/assets/sass/site.scss
/* IMPORT AND VARIABLES
   ============================= */
@import 'mixins';

$spaceUnit:			40px;
$widthSidebar:	    240px;
$colorText: 		#efefef;
$colorForeground:	#3b9cff;
$backgroundColor: 	#333;


/* STRUCTURE
   ============================= */
html {
	background: #111;
	background-attachment: fixed;
	height: 100%;
	min-height: 100%;
}
body {
	color: $colorText;
	font-family: 'Kalam', cursive;
	font-weight: normal;
	font-size: 16px;
	line-height: 26px;
	height: 100%;
	min-height: 100%; 
}


#global {
	height: 100%;
	min-height: 100%;
}

/* SIDEBAR */
#sidebar {
	background-color: #000;
	height: 100%;
	min-height: 100%;
	padding: $spaceUnit;
	position: fixed;
	z-index: 9;
	margin-left: $spaceUnit;
	width: $widthSidebar;
	@include box-shadow( 0 1px 20px rgba(0,0,0,0.4));
	.logo {
		img {
			width: 100%; 
		}
	}
	.spacer {
		border-bottom: 1px solid #444;
		margin: 20px 0; 
		&.sticky {
			margin: 6px 0;
		}
	}
	#nav-open-action { display: none; }
	nav {
		#nav-close-action { display: none; }
		ul {
			list-style: inside none;
			margin: 0;
			padding: 0;
			li {
				margin: 5px 0;
				padding: 0;
				a, a:visited {
					display: block;
					color: $colorText;
					font-size: 14px;
					line-height: 28px;
					text-decoration: none;
					text-transform: uppercase;
					@include transition(all 0.1s 0.0s ease-out);
					&:hover,
					&.active {
						color: $colorForeground;
						@include transition(all 0.1s 0.0s ease-out);
					}
				}
			}
		}
	}
}

/* CONTENT */
#content {
	min-height: 100%;
	position: relative;
	padding: $spaceUnit;
	padding-left: $widthSidebar + ($spaceUnit*2);
	.vegas-caption {
		background-color: #000;
		bottom: $spaceUnit;
		padding: 2px 14px;
		@include opacity(0);
		position: absolute;
		right: $spaceUnit;
		text-transform: uppercase;
		z-index: 999;
	}
	.mask-content {
		background-color: transparentize(#000, 0.3);
		padding: $spaceUnit;
	}
}

/* FOOTER */
footer {
	overflow: hidden;
	bottom: 0;
	left: 0;
	padding: $spaceUnit;
	position: absolute;
	width: $widthSidebar;
	.social {
		li {
			display: inline-block;
			margin-right: 8px;
			a, a:visited {
				color: $colorText;
				font-size: 22px;
				&:hover {
					color: $colorForeground;
				}
			}
		}
	} 
	.copyright {
		font-size: 9px;	
		padding: 0;
		margin: 0;	
	}
}

/* OVERLAYS
   ============================= */
.overlay {
	background-color: transparentize(#000, 0.1);
	display: none;
	top: 0;
	left: 0;
	position: fixed;
	height: 100%;
	width: 100%;
	z-index: 999;
	&.loading {
		display: block;
		line-height: 100vh;
		text-align: center;
		span { 
			background: transparentize(#fff, 0.9);
			color: #777;
			display: inline-block;
			font-family: Arial;
			font-size: 13px;
			font-weight: 100;
			line-height: 24px;
			padding: 6px 12px;
			vertical-align: middle;
			@include border-radius(3px);
		} 
	}
}


/* SHORCODES
   ============================= */
.portfolio {
	margin: -10px;
	@include opacity(0);
	.item {
		$spacer: 30px;
		display: block;
		position: relative;
		overflow: hidden;
		float: left;
		width: 33.33%; // default with rewrite in javascript
		@include box-shadow( 0 1px 20px rgba(0,0,0,0.4));
		.mask {
			background-color: transparentize(#000, 0.8);
			height: 100%;
			left: 0;
			@include opacity(0);
			position: absolute;
			top: 0;
			width: 100%;
			z-index: 2;
			@include transition(all 0.2s ease);
			span {
				color: #fff;
				display: block;
				@include opacity(1);
				overflow: visible;
				padding: 0 $spacer;
				position: absolute;
				width: 100%;
				@include transition(all 0.2s ease);
				&.title {
					font-size: 26px;
					line-height: 50px;
					position: relative;
					text-align: right;
					top: $spacer;
					&::after {
						background: #fff;
						bottom: 0px;
						content: '';
						height: 2px;
						left: $spacer;
						@include opacity(0);
						position: absolute;
						right: $spacer;
						-webkit-transform: translate3d(0,40px,0);
						transform: translate3d(0,40px,0);
						@include transition(all 0.2s ease);
					}
				}
				&.summary {
					bottom: 0;
					@include opacity(0);
					font-size: 16px;
					line-height: 20px;
				}
			}
			&.category {
				/* todo something */
				@include opacity(1);
				@include transition(all 0.2s ease);
			}
		}
		img {
			display: block;
			position: relative;
			margin: 0;
			z-index: 1;
		}  
		&:hover {
			.mask {
				background-color: transparentize(#000, 0.5);
				@include opacity(1);
				@include transition(all 0.2s ease);
				span {
					@include transition(all 0.4s ease);
					&.title {
						top: 15px;
						&::after {
							@include opacity(1);
							-webkit-transform: translate3d(0,0,0);
							transform: translate3d(0,0,0);
							@include transition(all 0.3s ease);
						}
					}
					&.summary {
						bottom: $spacer;
						@include opacity(1);
					}
				}
			}
		}
		html.touch & {
			.mask {
				@include opacity(1);
			}
		}
		
	}
	&.loaded {
		@include opacity(1);
		@include transition(opacity 0.4s ease-in);
	}
	html.touch & .mask {
		@include opacity(1);
	}
}

.overflow {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.actions {
	border-top: 1px solid $backgroundColor + 30;
	margin-top: 20px;
	padding: 20px 0;
	text-align: right;
}

.button, .button:visited {
	background-color: #000;
	border: 1px solid $colorForeground;
	display: inline-block;
	color: $colorForeground;
	padding: 4px 6px 2px 6px;
	font-size: 12px;
	text-transform: uppercase;
	text-decoration: none;
	@include transition(all 0.1s ease-in);
	&:hover {
		background-color: $colorForeground;
		color: #fff;
		@include transition(all 0.1s ease-in);
	}
	&:active {
		background-color: $colorForeground + 30;
	}
}


/* LIGHTBOX
   ============================= */
.fancybox-skin {
	.fancybox-item,
	.fancybox-nav span {
		background-image: none;
		background-color: transparentize(#000, 0.2);
		color: #fff;
		display: inline-block;
		font-size: 12px;
		height: auto;
		line-height: 16px;
		padding: 4px 8px;
		text-align: center;
		text-decoration: none;
		text-transform: uppercase;
		width: auto;
	}

	.fancybox-item {
		position: absolute;
		top: 0;
		right: 0;
	}
	.fancybox-prev span {
		left: 0;
	}
	.fancybox-next span {
		right: 0;
	}

	.fancybox-title {
		.caption-title {
			color: #fff;
		}
		.caption-legend {
			color: #fff - 100;
		}
	}
}

/* WYSIWYG
   ============================= */
.wysiwyg {
	overflow: hidden;
	h1, h2, h3 {
		text-transform: uppercase;
		&:first-child {
			margin-top: 0;
		}
	}
	h1 {
		font-size: 32px;
		line-height: 36px;
		margin: 0; 
		padding: 0;
	}

	h2 {
		font-size: 22px;
		line-height: 26px;
		margin: 40px 0 20px 0;
		padding: 0;
	}

	p {
		margin: 16px 0 16px 0;
		padding: 0;
	}
	strong {
		font-weight: 700;
	}
	a, a:visited {
		color: $colorForeground;
		text-decoration: underline;
		&:hover {
			text-decoration: none;
		}
	}

	iframe, img, object {
		display: block;
		height: auto !important;
		max-width: 100%;
		margin: 10px 0;
		&.align_justify {
			clear: both;
			float: none;
			margin-left: 0px;
			margin-right: 0px;
			width: 100%;
		}
		&.align_left {
			float: left;
			margin-right: 10px;
		}
		&.align_center {
			clear: both;
			float: none;
			margin-left: auto;
			margin-right: auto;
		}
		&.align_right {
			float: right;
			margin-left: 10px;
		}
	}
}

